futurproctor/tb.txt
Traceback (most recent call last):
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\test_render.py", line 16, in <module>
    response = c.get('/round1/start/')
               ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\test\client.py", line 1129, in get
    response = super().get(
               ^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\test\client.py", line 479, in get
    return self.generic(
           ^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\test\client.py", line 676, in generic
    return self.request(**r)
           ^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\test\client.py", line 1092, in request
    self.check_exception(response)
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\test\client.py", line 805, in check_exception
    raise exc_value
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 60, in _view_wrapper
    return view_func(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\proctoring\views.py", line 898, in start_round1
    return render(request, 'round1_exam.html', {
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 489, in parse
    raise self.error(token, e)
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 487, in parse
    filter_expression = self.compile_filter(token.contents)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 605, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 702, in __init__
    self.args_check(filter_name, filter_func, args)
  File "C:\Users\varun\Downloads\AI interview (3)\AI interview\Ai interview\futurproctor\venv\Lib\site-packages\django\template\base.py", line 764, in args_check
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: default requires 2 arguments, 1 provided
